# Kintone-mcp-python

./: CLAUDE.md  README.md  TESTING_README.md  architecture.xml
src/python/: __init__.py  config.py  debug_tools.py  main.py  pyproject.toml  requirements.txt
src/python/config/: __init__.py  settings.py
src/python/core/: __init__.py  exceptions.py  lifespan.py  response_models.py
src/python/models/: __init__.py  kintone_app.py  kintone_credentials.py  kintone_field.py  kintone_record.py  validation_models.py
src/python/repositories/: __init__.py  base.py  file_repository.py  kintone_app_repository.py  kintone_repository.py  nodejs_kintone_client.py  nodejs_wrapper_interface.py  record_repository.py  space_repository.py  user_repository.py
src/python/repositories/validators/: __init__.py  constants.py  field_validator.py  layout_validator.py
src/python/server/: __init__.py  mcp_server.py
src/python/server/api/: __init__.py  kintone_routes.py
src/python/server/handlers/: __init__.py  mcp_handler.py
src/python/server/mcp/: __init__.py  fastapi_mcp.py  native_server.py
src/python/server/tools/: __init__.py  handler.py
src/python/server/tools/definitions/: __init__.py  app_tool_definitions.py  documentation_tools_definitions.py  field_tool_definitions.py  field_tools_definitions.py  file_tools_definitions.py  layout_tool_definitions.py  logging_tools_definitions.py  record_tools_definitions.py  record_tools_schemas.py  space_tools_definitions.py  (+2 more)
src/python/utils/: __init__.py  error_handler.py  exceptions.py  layout_utils.py  logging_config.py
(+22 files in other folders)
