[project]
name = "kintone-mcp-server"
version = "1.0.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "jsonrpcserver==5.0.9",
    "aiohttp==3.9.1",
    "requests==2.31.0",
    "mypy==1.7.1",
    "flake8==6.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "python-dotenv==1.0.0",
    "structlog==23.2.0"
]

[project.scripts]
kintone-mcp-server = "src.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

